2004-08-23	Victor Nilsson	<vervex@home.se>

	* firefox/global/menu.css: a fix which makes dropdown arrows 
	  appear in toolbar buttons
	* firefox/global/icons/folder-item.png: modified disabled state

	* firefox/browser/bookmarks/Bookmarks-toolbar.png: change the 
	  icon size to 16x16 and modified some icons 
	* firefox/browser/bookmarks/bookmarksManager.css

	* firefox/help/help-toolbar.png
	* firefox/help/help.css
	* firefox/help/sbtab-texture.gif
	* firefox/help/sbtab-twisty.png
	* firefox/help/sidebar.css
	* firefox/help/sidebarBindings.xml
	* firefox/help/sbtab-twisty-open.gif: deleted
	* firefox/help/sbtab-twisty.gif: deleted

	* firefox/mozapps/webdeveloper/webdev-toolbar.png: replaced the 
	  outline icon

	* src/webdev-toolbar.png
	* src/help-toolbar.xcf


2004-08-14	Roman Joost	<roman@bromeco.de>

	* firefox/install.rdf: new version
	
	* src/20x20-icons.xcf
	* firefox/browser/toolbar.png: new bookmarks icon, which fixes
	  bug #002223
	
	* firefox/browser/about.png
	* firefox/browser/aboutDialog.css: removed because it's
	  deprecated and not anymore in use
	
	* firefox/preview.png: fixed Name to Stephanie Warrick
	

2004-08-08	Roman Joost	<roman@bromeco.de>

	* firefox/global/global.css
	* firefox/browser/webdev-toolbar.png
	* firefox/browser/webdev-statusbar.png
	* firefox/browser/webdev-sidebar.png
	* firefox/mozapps/webdeveloper
	* firefox/mozapps/webdeveloper/webdev-toolbar.png
	* firefox/mozapps/webdeveloper/webdev-statusbar.png
	* firefox/mozapps/webdeveloper/webdev-sidebar.png: moved into
	   seperate location
	   
	* src/extensionalert.xcf
	* src/display.xcf
	* src/throbber_old.xcf
	* src/packet.xcf
	* src/throbber.xcf
	* src/buttonsnew.xcf
	* src/Close-tab.xcf
	* src/little_display.xcf
	* src/20x20-icons.xcf
	* src/little_displayanimated.xcf
	* src/throbber_old_merged.xcf
	* src/throbber_merged.xcf
	* src/tab-throbber
	* src/tab-throbber/tab-throbber.xcf
	* src/tab-throbber/tab-throbber_merged.xcf
	* src/tab-new.xcf
	* src/page-themes.xcf