@@ -796,3 +796,17 @@ toolbar[mode="text"] > #window-controls > toolbarbutton > .toolbarbutton-text {
   border-top: 1px solid ThreeDShadow;
 }
 
+/* ::::: web developer toolbar ::::: */
+.webdeveloper-toolbar-button
+{
+  list-style-image: url("chrome://mozapps/skin/webdeveloper/webdev-toolbar.png") !important;
+}
+.webdeveloper-statusbar-button
+{ 
+  list-style-image: url("chrome://mozapps/skin/webdeveloper/webdev-statusbar.png") !important; 
+}
+.webdeveloper-sidebar-button
+{
+ list-style-image: url("chrome://mozapps/skin/webdeveloper/webdev-sidebar.png") !important;
+}
+
