@@ -1,11 +1,43 @@
 <?xml version="1.0"?>
 
-<RDF xmlns="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-     xmlns:em="http://www.mozilla.org/2004/em-rdf#">
+<RDF:RDF xmlns:RDF="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+         xmlns:em="http://www.mozilla.org/2004/em-rdf#">
 
-  <Description about="urn:mozilla:extension:{68a34935-bad7-4224-890f-4b15d20598d7}">
-    <em:version>0.9</em:version>
-    <em:updateLink>http://download.berlios.de/pixelzilla/pixelzilla-firefox-0.9.jar</em:updateLink>
-  </Description>
+  <RDF:Description about="urn:mozilla:extension:{68a34935-bad7-4224-890f-4b15d20598d7}">
+    <em:updates>
+      <Seq>
+				<li resource="urn:mozilla:extension:{68a34935-bad7-4224-890f-4b15d20598d7}:0.9.1"/>
+        <li resource="urn:mozilla:extension:{68a34935-bad7-4224-890f-4b15d20598d7}:0.9.2"/>
+      </Seq>
+    </em:updates>
+  </RDF:Description>
+		 
+  <RDF:Description about="urn:mozilla:extension:{68a34935-bad7-4224-890f-4b15d20598d7}">
+    <em:version>0.9.1</em:version>
+		<em:targetApplication>
+      <Description>
+        <em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
+        <em:minVersion>0.9</em:minVersion>
+        <em:maxVersion>1.0</em:maxVersion>
+        <em:updateLink>http://download.berlios.de/pixelzilla/pixelzilla-firefox-0.9.1.jar</em:updateLink>
+      </Description>
+    </em:targetApplication>
+  </RDF:Description>
+	
+	<RDF:Description about="urn:mozilla:extension:{68a34935-bad7-4224-890f-4b15d20598d7}">
+    <em:version>0.9.2</em:version>
+		<em:targetApplication>
+      <Description>
+        <em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
+        <em:minVersion>0.9</em:minVersion>
+        <em:maxVersion>1.0</em:maxVersion>
+        <em:updateLink>http://download.berlios.de/pixelzilla/pixelzilla-firefox-0.9.2.jar</em:updateLink>
+      </Description>
+    </em:targetApplication>
+  </RDF:Description>
 
-</RDF>
+	<!-- For Firefox 0.9 compatibility -->
+	<em:version>0.9.2</em:version>
+  <em:updateLink>http://download.berlios.de/pixelzilla/pixelzilla-firefox-0.9.2.jar</em:updateLink>
+
+</RDF:RDF>
